# Multi-agent-system

./: .env  pyproject.toml  ui.py
agent/: agent.py  coding_agent.py  general_agent.py  llm.py  rag.py  rag_agent.py  router.py  tool_agent.py  tools.py  upload_rag.py
api/: api.py
docker/: .dockerignore  Dockerfile
uploads/: sample_ai.txt
vector_db/data/: ai.txt
